<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout"
    android:background="#E2F0CB">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/img_profile" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/tname"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_marginStart="10dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/tphone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_marginStart="10dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/address"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/taddress"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_marginStart="10dp"/>
    </TableRow>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:text="@string/tombol"
        android:backgroundTint="#B1907F"/>
</TableLayout>